docker function properly

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,26 @@
-# Use the official Node.js image from the Docker Hub
-FROM node:18
+# Use an official Node.js runtime as a parent image
+FROM node:14
 
-# Set the working directory
-WORKDIR /frontend
+# Set the working directory in the container
+WORKDIR /app
 
-# Copy the package.json and package-lock.json into the container
-COPY package.json package-lock.json ./
+# Copy package.json and package-lock.json
+COPY package*.json ./
 
 # Install the dependencies
 RUN npm install
 
-# Ensure node_modules/.bin is in the PATH
-ENV PATH /frontend/node_modules/.bin:$PATH
-
-# Debugging: List node_modules/.bin contents to verify vite installation
-RUN ls -la /frontend/node_modules/.bin
-
 # Copy the rest of the application code
 COPY . .
 
-# Build the application
+# Build the React app
 RUN npm run build
 
-# Expose the port on which the app will run
-EXPOSE 4173
+# Install the 'serve' package globally
+RUN npm install -g serve
 
-# Command to run the application
-CMD ["npm", "run", "start"]
+# Expose the port the app runs on
+EXPOSE 3000
+
+# Start the application using 'serve'
+CMD ["serve", "-s", "dist"]
