--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview" 
+    "start": "serve -s dist"  
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.14.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "serve": "^14.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
